# fetus-care

./: README.md  app flow 2.md  bifrost.json  main.py  package.json  pnpm-lock.yaml
api/: .gitignore  README.md  main.py  pyproject.toml
app/Http/: Kernel.php
app/Models/: Appointment.php  ProfessionalUser.php  User.php  UserProfile.php
database/migrations/: 2014_10_12_000000_create_users_table.php  2025_02_22_130614_create_user_profiles_table.php  2025_02_22_220715_create_professional_users_table.php  2025_02_23_031052_create_appointments_table.php
frontend/: .gitignore  env.config.ts  next.config.ts  package.json
frontend/.next/: trace
frontend/_mock_/: chats.ts
frontend/app/: layout.tsx  not-found.tsx
frontend/constants/: consts.ts
frontend/db/: schema.ts
frontend/drizzle/: 0000_far_maddog.sql
frontend/hooks/: use-active-chat.ts  use-chats.ts
frontend/server/: get-all-professionals.ts
frontend/supabase/: client.ts
frontend/types/: objects.ts  user.d.ts
frontend/utils/: db.ts
golang/: .air.toml  .gitignore  go.mod  go.sum  main.go
golang/database/: conn.go
golang/handlers/: register.go
golang/logger/: logger.go
nextjs/: drizzle.config.neon.ts  drizzle.config.ts  env.config.ts  middleware.ts
nextjs/_mock_/: appointments.ts
nextjs/app/: page.tsx
nextjs/components/: query-provider.tsx
nextjs/constants/: consts.ts
nextjs/db/: index.ts  neon-schema.ts  schema.ts
nextjs/hooks/: use-active-chat.ts  use-user.ts
nextjs/server/: get-all-professionals.ts  register-action.ts
nextjs/supabase/: server.ts
routes/: api.php
(+48 files in other folders)
